--- a/templado/templates/templado/report_list.html
+++ b/templado/templates/templado/report_list.html
@@ -10,12 +10,12 @@
                         <div class="buttons">
                             <div class="upper-btn">
                                 <a class="btn btn-primary btn-sm btn-block"
-                                   href="{% url 'edit-report-form' report.id %}">Edit</a>
+                                   href="{% url 'templado:edit-report-form' report.id %}">Edit</a>
                             </div>
                             <div class="lower-btn">
                                 <a class="btn btn-success btn-sm btn-block"
 
-                                href="{% url 'download-report' report.id %}">Download</a>
+                                href="{% url 'templado:download-report' report.id %}">Download</a>
                             </div>
                         </div>
 
