--- a/templado/templates/templado/reporttemplate_list.html
+++ b/templado/templates/templado/reporttemplate_list.html
@@ -10,10 +10,10 @@
                     <div class="buttons">
                         <div class="upper-btn">
                             <a class="btn btn-primary btn-sm btn-block"
-                               href="{% url 'edit-template-form' template.id %}">Edit</a>
+                               href="{% url 'templado:edit-template-form' template.id %}">Edit</a>
                         </div>
                         <div class="lower-btn">
-                            <a class="btn btn-success btn-sm btn-block" href="{% url 'report-form' template.id %}">Generate</a>
+                            <a class="btn btn-success btn-sm btn-block" href="{% url 'templado:report-form' template.id %}">Generate</a>
                         </div>
                     </div>
 
