--- a/templado/templates/templado/help_site.html
+++ b/templado/templates/templado/help_site.html
@@ -3,4 +3,9 @@
 
 {% block app_content %}
     App for creating reports from templates.
+    <p>
+        <strong>
+            <a href="http://templado.readthedocs.org/en/latest/" target="blank">Manual and documentation</a>
+        </strong>
+    </p>
 {% endblock %}
